crates/tests/libs/bindgen/data/error/winrt_delegate_param_non_winrt_type/input.rdl

#[winrt]
mod Test {
    delegate fn MyDelegate(value: Win32Type);
}
#[win32]
mod Test {
    struct Win32Type { x: i32, }
}
